# my_nerf

./: .gitignore  pyproject.toml
my_nerfacto/: my_config.py  my_datamanager.py  my_model.py  my_pipeline.py
